; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_stop_hotkeys.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_stop_hotkeys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.obs_core_hotkeys }
%struct.obs_core_hotkeys = type { i32, i32, i32 }

@obs = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @stop_hotkeys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stop_hotkeys() #0 {
  %1 = alloca %struct.obs_core_hotkeys*, align 8
  %2 = alloca i8*, align 8
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @obs, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  store %struct.obs_core_hotkeys* %4, %struct.obs_core_hotkeys** %1, align 8
  %5 = load %struct.obs_core_hotkeys*, %struct.obs_core_hotkeys** %1, align 8
  %6 = getelementptr inbounds %struct.obs_core_hotkeys, %struct.obs_core_hotkeys* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %20

9:                                                ; preds = %0
  %10 = load %struct.obs_core_hotkeys*, %struct.obs_core_hotkeys** %1, align 8
  %11 = getelementptr inbounds %struct.obs_core_hotkeys, %struct.obs_core_hotkeys* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @os_event_signal(i32 %12)
  %14 = load %struct.obs_core_hotkeys*, %struct.obs_core_hotkeys** %1, align 8
  %15 = getelementptr inbounds %struct.obs_core_hotkeys, %struct.obs_core_hotkeys* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @pthread_join(i32 %16, i8** %2)
  %18 = load %struct.obs_core_hotkeys*, %struct.obs_core_hotkeys** %1, align 8
  %19 = getelementptr inbounds %struct.obs_core_hotkeys, %struct.obs_core_hotkeys* %18, i32 0, i32 0
  store i32 0, i32* %19, align 4
  br label %20

20:                                               ; preds = %9, %0
  %21 = load %struct.obs_core_hotkeys*, %struct.obs_core_hotkeys** %1, align 8
  %22 = getelementptr inbounds %struct.obs_core_hotkeys, %struct.obs_core_hotkeys* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @os_event_destroy(i32 %23)
  %25 = call i32 (...) @obs_hotkeys_free()
  ret void
}

declare dso_local i32 @os_event_signal(i32) #1

declare dso_local i32 @pthread_join(i32, i8**) #1

declare dso_local i32 @os_event_destroy(i32) #1

declare dso_local i32 @obs_hotkeys_free(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
